syntax = "proto3";

package kiwiband.dnb.rpc;

message Empty { }

message JsonString {
    string json = 1;
}

message PlayerId {
    int32 id = 1;
}

message UserEvent {
    int32 playerId = 1;
    string json = 2;
}

service GameService {
    rpc connect(Empty) returns (PlayerId) { }
    rpc disconnect(PlayerId) returns (Empty) { }
    rpc userEvent(UserEvent) returns (Empty) { }
    rpc updateMap(PlayerId) returns (stream JsonString) { }
}
